--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ ext	{
 dependencies {
 	implementation "org.apache.camel:camel-spring-boot-starter:${camelVersion}"
 	compile "org.apache.camel:camel-csv-starter:${camelVersion}"
+//	compile "org.apache.camel:camel-bindy-starter:${camelVersion}"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
