--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ ext	{
 dependencies {
 	implementation "org.apache.camel:camel-spring-boot-starter:${camelVersion}"
 	compile "org.apache.camel:camel-csv-starter:${camelVersion}"
-//	compile "org.apache.camel:camel-bindy-starter:${camelVersion}"
 	testCompile "org.apache.camel:camel-test-spring:${camelVersion}"	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -30,4 +29,5 @@ dependencies {
 	compile "javax.xml.bind:jaxb-api:${jaxbVersion}"
 	compile "com.sun.xml.bind:jaxb-core:${jaxbVersion}"
 	compile "com.sun.xml.bind:jaxb-impl:${jaxbVersion}"
+	//compile 'log4j:log4j:1.2.17'	
 }
